--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -62,6 +62,9 @@ body {
     height: 150px;
     padding: 20px 0px 0px 5px;
 }
+.calendar td:hover{
+    background-color: lightgray;
+}
 
 .month {
     font-size: 25px;
@@ -70,6 +73,7 @@ body {
 .date {
     font-size: 16px;
 }
+
   
 ul {
     height: 100%;
@@ -77,5 +81,7 @@ ul {
 }
   
 a {
-    color: #17a2b8;
+    /* color: #17a2b8; */
+    color: black;
+    text-decoration: none;
 }
