--- a/moneymanagerapp/templates/home.html
+++ b/moneymanagerapp/templates/home.html
@@ -13,8 +13,9 @@ Calendar
     <form action="/go_to/" method="POST">
         {% csrf_token %}
         Date : <input type="date" name="tdate">
-        <input type="submit" value="GO TO"/>
+        <input type="submit" value="GO TO"/>    
     </form>
+    <a class="btn btn-info right" href="{% url 'cal:calendar' %}?{{ today }}"> Today </a>
 
     {{ calendar }}
 {% endblock %}
