--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -85,3 +85,92 @@ a {
     color: black;
     text-decoration: none;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.6);
+    /* transition: 5s; */
+    /* visibility: hidden; */
+    /* opacity: 0; */
+}
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    /* background: rgba(0, 0, 0, 0.6); */
+    background: #fff;
+    border-radius: 4px;
+    width: 30%;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    /* padding: 25px; */
+    transform: translate(-50%,-50%);
+    /* transition: all 5s ease-in-out; */
+}
+.popup-head{
+    width: 100%;
+    border-bottom: 0.4px solid lightgray;
+}
+.popup h2{
+    padding: 20px 25px;
+    margin-top: 0;
+    font-weight: lighter;
+    color: black;
+    font-size: 25px;
+    /* border-bottom: 2px lightgrey; */
+    font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+    position: absolute;
+    top: 18px;
+    right: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+}
+.popup .close:hover {
+    color: #6b0367;
+}
+.popup .content{
+    padding: 30px 30px;
+}
+/* .popup input{
+    margin: 20px 0px;
+    width: 100%;
+    font-weight: bold;
+    padding: 0 15px;
+    font-size: 17px;
+    height: 50px;
+    border-radius: 4px;
+}
+.popup input[type="text"], input[type="date"], input[type="password"], input[type="file"]
+{
+    color: gray;
+    background-color: white;
+    border: none;
+    font-weight: lighter;
+    border: 0.5px solid lightgray;
+}
+.popup input[type="file"]
+{
+    padding:10px;
+}
+.popup input[type="submit"]
+{
+    color: white;
+    background-color: #6b0367;
+    border: none;
+    box-shadow: 0 0 3px gray;
+}
+.popup input[type="submit"]:hover
+{
+    opacity: 0.8;
+}  */
