--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -10,31 +10,23 @@ body {
     float: right;
 }
 
-.btn {
-    outline: none;
-    color: black;
-    background-color: transparent;
-    box-shadow: 0 0 0 0;
-    margin-right: 3px;
-}
-
 .clearfix {
     margin: 15px;
+    width: 40%;
+    float: left;
+    margin-top: 50px;
 }
-
-.form {
-    margin: auto;
-}
-  
-.form input, .form select, .form textarea {
+.btn{
+    border: 1px solid #28a745;
+    background-color: rgba(193, 253, 181,0.6);
     border-radius: 5px;
-    border: 1px solid #17a2b8;
-    outline: none;
-    background: none;
-    padding: 5px;
-    width: 100%;
+    padding: 5px 10px;
+    margin: 20px;
 }
-  
+.btn:hover{
+    background-color: rgba(193, 253, 181);
+}
+ 
   /* App styles */
 .title {
     text-align: center;
@@ -42,28 +34,40 @@ body {
 }
   
 .calendar {
-    width: 98%;
+    /* width: 50%; */
+    float: left;
     margin: auto;
     font-size: 13px;
+    /* margin-left: 5%; */
+    margin-top: 10px;
 }
   
-.calendar tr, .calendar td {
-    border: 1px solid black;
-}
 
 .calendar th {
     padding: 10px;
     text-align: center;
     font-size: 18px;
+    background-color: rgba(189, 250, 229, 0.6);
+    box-sizing: border-box;
+    border: 2px solid white;
+    border-radius: 5px;
 }
-
+.calendar th:hover{
+    background-color: rgba(189, 250, 229);
+}
 .calendar td {
-    width: 200px;
-    height: 150px;
-    padding: 20px 0px 0px 5px;
+    width: 80px;
+    height: 70px;
+    vertical-align: top;
+    text-align: left;
+    background-color: rgba(193, 253, 181, 0.6);
+    box-sizing: border-box;
+    border: 2px solid white;
+    border-radius: 5px;
+    /* padding: 10px 0px 0px 5px; */
 }
 .calendar td:hover{
-    background-color: lightgray;
+    background-color: rgba(193, 253, 181);
 }
 
 .month {
@@ -72,12 +76,26 @@ body {
   
 .date {
     font-size: 16px;
+    width: 30%; 
+    margin: 2px;
+    /* padding: 5px; */
+    /* float: left; */
+
+    /* padding: 37%;
+    padding-bottom: 33%; */
+    /* background-color: #28a745; */
 }
 
   
 ul {
-    height: 100%;
-    padding: 0px 5px 0px 20px;
+    /* height: 100%; */
+    /* padding: 0px 5px 0px 20px; */
+    margin: 0;
+    width: 70%;
+    float: right;
+    text-align: center;
+    list-style: none;
+    padding: 0;
 }
   
 a {
@@ -119,8 +137,8 @@ a {
     border-bottom: 0.4px solid lightgray;
 }
 .popup h2{
-    padding: 20px 25px;
-    margin-top: 0;
+    padding: 0 25px;
+    /* margin-top: 0; */
     font-weight: lighter;
     color: black;
     font-size: 25px;
@@ -153,8 +171,7 @@ a {
 .link-left{
     width: 33.25%;
     float: left;
-    background-color: #2dbe60;
-    color: white;    
+    background-color:rgba(193, 253, 181, 0.6); 
     
 }
 .content p{
@@ -162,22 +179,53 @@ a {
     line-height: 10px;
     padding-bottom: 10px;
 }
-.content a{
+.content-show p{
+    /* display: inline; */
+    /* line-height: 20px; */
+    background-color: rgba(189, 250, 229, 0.6);
+    /* height: 20px; */
+    border-radius: 5px;
+    padding: 7px 20px;
+    margin: 5px;
+}
+.content h3{
+    margin: 15px 0px;
+    /* color: darkgray; */
+}
+.content-show{
+    padding: 20px;
+}
+.content-show h3{
+    margin: 15px 7px;
+    margin-bottom: 0;
+    /* color: darkgray; */
+}
+.content-show a{
     width: 15%;
+    text-align: center;
     float: right;
+}
+.content-show a:hover{
+    font-weight: bold;
+}
+.content-show h4{
+    font-size: 21px;
+    font-weight: lighter;
+    margin: 7px;
+    margin-bottom: 0px;
 }
 .link-right{
     width: 33.5%;
-    color: white;
+
     float: right;
-    background-color: #2dbe60;
+    background-color: rgba(193, 253, 181, 0.6);
     /* opacity: 70%; */
 }
 .active{
-    background-color: #28a745;
+    background-color: rgba(193, 253, 181);
 }
 .link a:hover{
-    background-color: #28a745;   
+    background-color: rgba(193, 253, 181);   
 }
 
 .popup input, select{
@@ -201,12 +249,100 @@ a {
 
 .popup input[type="submit"]
 {
-    color: white;
-    background-color: #2dbe60;
+    background-color: rgba(193, 253, 181, 0.6);
     border: none;
-    box-shadow: 0 0 3px gray;
 }
 .popup input[type="submit"]:hover
 {
-    opacity: 0.8;
+    background-color: rgba(193, 253, 181);
 } 
+img{
+    /* float: right; */
+    height: 100;
+    width: 55%;
+    margin: 0;
+    margin-left: -7%;
+    /* background-color: aquamarine; */
+}
+.content-left{
+    width: 40%;
+    float: left;
+    margin: 0;
+    text-align: center;
+    /* top: 0; */
+    /* background-color: #2dbe60; */
+}
+.content-right{
+    float: right;
+    width: 60%;
+    text-align: center;
+    /* background-color: #2dbe60; */
+}
+.content-right h3{
+    
+    display: inline;
+    line-height: 40px;
+}
+.content-right p{
+    /* padding-top: 50px; */
+    padding: 0px 15px;
+    display: inline;
+    line-height: 40px;
+}
+.content-cal{
+    /* width: 50%; */
+    float: left;
+    /* margin-top: 20px; */
+    margin-left: 30px;
+    padding-top: 0;
+}
+.content-calhead{
+    margin: 20px 0px;
+}
+.head{
+    
+    /* width: 80%; */
+    margin: 30px 30px;
+    height: 50px;
+    /* vertical-align: c; */
+    /* margin-top: 30px; */
+    padding-top: 10px;
+    border-radius: 5px;
+    background-color: rgba(189, 250, 229, 0.6);  
+}
+.bot{
+    margin-top: 20px;
+}
+.bot input[type="submit"]{
+    box-sizing: border-box;
+    border: 1px solid white;
+    background-color: rgba(189, 250, 229, 0.6);  
+    margin: 20px;  
+    font-size: 17px;
+    box-shadow: 0 0 2px gray;
+    /* margin-top: 0; */
+}
+.bot input[type="submit"]:hover{
+    background-color: rgba(189, 250, 229);
+}
+.bot input[type="date"]{
+    background-color: rgba(189, 250, 229, 0.6);
+    height: 30px;
+    border-radius: 4px;
+    padding: 0px 5px;
+    font-weight: bold;
+    /* margin: 0 15px; */
+}
+.bot p{
+    display: inline;
+    font-size: 18px;
+}
+.green{
+    color: #28a745;
+}
+.red{
+    color: red;
+}
+.blue{
+    color: blue;
+}
