--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -300,7 +300,7 @@ img{
 }
 .content-calhead{
     margin: 5% 0px;
-    text-align: center;
+    /* text-align: center; */
     width: 100%;
 }
 .head{
