--- a/moneymanagerapp/templates/base.html
+++ b/moneymanagerapp/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <!-- Bootstrap CSS-->
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
     <title>Django Calendar App</title>
 </head>
