--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -298,7 +298,7 @@ img{
     /* width: 80%; */
     margin: 10px 30px;
     margin-bottom: 20px;
-    min-height: 45px;
+    /* min-height: 45px; */
     text-align: center;
     /* margin-top: 30px; */
     padding-top: 5px;
@@ -370,5 +370,12 @@ img{
     }
     .bot{
         margin: 0;
+    }
+    .head{
+        margin: 0;
+        margin-bottom: 20px;
+    }
+    .popup{
+        width: 350px;
     }
 }
