--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -219,8 +219,7 @@ a {
 
 .popup input, select{
     margin: 5px 0px;
-    /* width: 100%; */
-    /* float: right; */
+
     font-weight: bold;
     padding: 0 15px;
     font-size: 17px;
@@ -343,6 +342,89 @@ img{
 .blue{
     color: blue;
 }
+
+.login-box{
+    width: 450px;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+.login-box h1{
+    text-align: center;
+    font-weight: lighter;
+    font-size: 30px;
+    /* margin: 120px 0px; */
+    /* margin-bottom: 30px; */
+}
+.login-box p{
+    margin: 12px 0px;
+    font-size: 15px;
+    color: gray;
+}
+.login-box input{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.login-box input[type="text"], input[type="password"]
+{
+    border: none;
+    color: gray;
+    box-shadow: 0 0 1px gray;
+    outline: none;
+    padding-left: 15px;
+    border-radius: 5px;
+    font-size: 17px;
+    height: 50px;
+}
+.login-box input[type="submit"]
+{
+    border: none;
+    outline: none;
+    height: 50px;
+    background: rgba(193, 253, 181);;
+    font-size: 13px;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 7px;
+    box-shadow: 0 0 2px gray;
+}
+.login-box input[type="submit"]:hover
+{
+    background: rgb(175, 252, 160);
+}
+
+.login-box a{
+    text-decoration: none;
+    color: rgb(135, 248, 113);
+    line-height: 30px;
+    font-size: 18px;
+    /* font-weight: bold; */
+}
+.login-box a:hover
+{
+    color: #000;
+}
+.message{
+    font-size: 18;
+    font-weight: bold;
+    text-align: center;
+    color: red;
+}.success{
+    color: green
+}
+.warning{
+    color: red;
+}
+.sign-up{
+    margin-top: 30px;
+    color: gray;
+    font-size: 18px;
+    text-align-last: center;
+    padding-bottom: 30px;
+}
+
 @media(max-width:1100px){
     img{
         margin: 0;
@@ -380,7 +462,7 @@ img{
         padding: 5px;
         margin: 0px 10px;
     }
-    .popup{
+    .popup, .login-box{
         width: 350px;
         padding: 0;
         margin: 0;
@@ -397,5 +479,10 @@ img{
     .head p{
         padding: 5px;
         margin: 0px 0px;
+    }
+    .popup, .login-box{
+        width: 300px;
+        padding: 0;
+        margin: 0;
     }
 }
