--- a/moneymanagerapp/templates/home.html
+++ b/moneymanagerapp/templates/home.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Monney Manager
-{% endblock %}
 {% load static %}
 {% block content %}
+    <h1 class="title">Monney Manager</h1><a href="/logout/">logout</a>
+    <hr>
     <div class="head">
         <p><h3>Income : </h3>{{ income }}</p>
         <p><h3>Expense : </h3>{{ expense }}</p>
