--- a/moneymanagerapp/templates/show_data.html
+++ b/moneymanagerapp/templates/show_data.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Calendar
-{% endblock %}
 {% load static %}
 {% block content %}
+
+    <h1 class="title">Monney Manager</h1>
+    <hr>
     <div class="head">
         <p><h3>Income : </h3>{{ income }}</p>
         <p><h3>Expense : </h3>{{ expense }}</p>
