--- a/moneymanagerapp/templates/add_data_inc.html
+++ b/moneymanagerapp/templates/add_data_inc.html
@@ -39,12 +39,12 @@
             <div class="popup-head">
                 <!-- {{ request.GET.day }} -->
             <h2>Add Data</h2>
-            <a class="close" href="/?month={{add_date | date:'Y-m'}}">&times;</a>
+            <a class="close" href="/home/?month={{add_date | date:'Y-m'}}">&times;</a>
             </div>
             <div class="link">
-                <a href="/show_data?day={{add_date | date:'d'}}" class="link-left">Details</a>
+                <a href="/show_data/?day={{add_date | date:'d'}}" class="link-left">Details</a>
                 <a href="" class="link-left active">Income</a>
-                <a href="/add_data?day={{add_date | date:'d'}}" class="link-right">Expense</a>
+                <a href="/add_data/?day={{add_date | date:'d'}}" class="link-right">Expense</a>
             </div>
             <div class="content">
                 <form action="/add_trans/?type=1" method="POST">
