--- a/moneymanagerapp/templates/edit_data.html
+++ b/moneymanagerapp/templates/edit_data.html
@@ -38,12 +38,12 @@
             <div class="popup-head">
                 <!-- {{ request.GET.day }} -->
             <h2>Details</h2>
-            <a class="close" href="/?month={{add_date | date:'Y-m'}}">&times;</a>
+            <a class="close" href="/home/?month={{add_date | date:'Y-m'}}">&times;</a>
             </div>
             <div class="link">
                 <a href="" class="link-left active">Edit</a>
-                <a href="/add_data_inc?day={{add_date | date:'d'}}" class="link-left">Income</a>
-                <a href="/add_data_inc?day={{add_date | date:'d'}}" class="link-right">Expense</a>
+                <a href="/add_data_inc/?day={{add_date | date:'d'}}" class="link-left">Income</a>
+                <a href="/add_data/?day={{add_date | date:'d'}}" class="link-right">Expense</a>
             </div>
             <div class="content">
 
