--- a/moneymanagerapp/templates/show_data.html
+++ b/moneymanagerapp/templates/show_data.html
@@ -39,7 +39,7 @@
             <div class="popup-head">
                 <!-- {{ request.GET.day }} -->
             <h2>Details</h2>
-            <a class="close" href="/?month={{add_date | date:'Y-m'}}">&times;</a>
+            <a class="close" href="/home/?month={{add_date | date:'Y-m'}}">&times;</a>
             </div>
             <div class="link">
                 <a href="" class="link-left active">Details</a>
