--- a/moneymanagerapp/static/css/home.css
+++ b/moneymanagerapp/static/css/home.css
@@ -15,13 +15,43 @@ body {
 .btn:hover{
     background-color: rgba(193, 253, 181);
 }
- 
-  /* App styles */
-.title {
-    text-align: center;
-    margin: 10px;
+
+.header {
+    width: 100%;
+    background-color:white;
+    overflow: hidden;
+    padding: 0px 0px;
+    color: 	black;    
+    box-shadow: 0.2px 0.2px 2px lightgray;
+    font-weight: bold;
+    min-height: 75px;
 }
-  
+.header-logo{
+    /* text-align: center; */
+    width: 50%;
+    float: left;
+}
+.header h1{
+    margin-left: 25%;
+}
+.header-btn{
+    width: 50%;
+    float: right;
+}
+.header-btn a{
+    float: right;
+    margin: 20px 25%;
+    font-size:17px;
+    color:black;
+    background-color: rgba(189, 250, 229, 0.6);
+    border-radius: 3px;
+    padding: 8px 22px;
+    text-decoration: none;
+}
+.header-btn a:hover{
+    border-color: rgba(189, 250, 229);
+}
+
 .calendar {
     /* width: 50%; */
     float: left;
